--- a/backend/parkingApp/src/main/resources/application.properties
+++ b/backend/parkingApp/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 server.port=8080
 
 # Configuración de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/parqueo_bd?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/parqueo_bd?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=caic08
+
 
 # JPA y Hibernate
 spring.jpa.hibernate.ddl-auto=update
@@ -13,3 +14,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Evitar errores de tiempo
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.jackson.serialization.fail-on-self-references=false
+
